--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,16 @@
 Package: CiteDrive
 Type: Package
 Title: CiteDrive 'BibTeX' Companion for R Markdown
-Version: 0.1.0
+Version: 1.0.0
 Author: CiteDrive LLC
-Maintainer: Gareth Bilaney <gareth.bilaney@hhu.de>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
+Maintainer: Nadja Stieger <nadja.stieger@stud.hn.de>
+Description: The CiteDrive addin sources informetric metadata from Crossref (www.crossref.org) und Semantic Scholar
+(www.semanticscholar.org) and processes it for output or further usage with other R-functions.
 License: MIT
 Encoding: UTF-8
 LazyData: true
+Imports:
+    httr,
+    jsonlite,
+    plyr,
+	stringr
