--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,8 +8,7 @@ Description: The CiteDrive addin sources informetric metadata from Crossref (www
     (www.semanticscholar.org) and processes it for output or further usage with other R-functions.
 License: MIT
 Encoding: UTF-8
-LazyData: true
-Imports:
+Depends:
     httr,
     jsonlite,
     plyr,
